# Prism

./: CMakeLists.txt  README.md
gui/: mainwindow.ui  ui_mainwindow.h
src/: ExifData.cpp  ExifData.h  MainWindow.cpp  MainWindow.h  exif_tags.h  main.cpp
